region-usa/az1/_common/policies/kyverno/pod-security/block-privilege-escalation.yaml
# Block Privilege Escalation
# Reference: https://kyverno.io/policies/pod-security/restricted/disallow-privilege-escalation/
# HIGH: Prevents privilege escalation via setuid binaries
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: Disallow Privilege Escalation
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0+
    kyverno.io/kubernetes-version: "1.22-1.30"
    policies.kyverno.io/description: >-
      Privilege escalation allows a process to gain more privileges than its parent.
      Setting allowPrivilegeEscalation to false ensures that no child process can
      gain more privileges than its parent. This policy ensures containers set
      allowPrivilegeEscalation to false.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - capi-system
                - capi-kubeadm-bootstrap-system
                - capi-kubeadm-control-plane-system
                - capa-system
                - capz-system
                - capg-system
                - capv-system
                - caaph-system
                - capk-system
                - capd-system
      validate:
        message: >-
          Privilege escalation is disallowed. The field
          spec.containers[*].securityContext.allowPrivilegeEscalation must be set to false.
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: "false"
            =(initContainers):
              - securityContext:
                  allowPrivilegeEscalation: "false"
            =(ephemeralContainers):
              - securityContext:
                  allowPrivilegeEscalation: "false"
